  Examples: "[%%client: val foo : int]" or "val%client foo : int".
  (Alain Frisch and Gabriel Radanne)
* GPR#342: Allow shortcuts for extension and attributes on all keywords:
  module%foo, class[@foo], etc.
  The attribute in "let[@foo] .. in .." is now attached to the value binding,
  not to the expression.
  (Gabriel Radanne)

Compilers:
* PR#4231, PR#5461: warning 31 is now fatal by default
  (Warning 31: A module is linked twice in the same executable.)
  This is an interim solution; double-linking of modules has dangerous semantics,
  eg. exception constructors end up with two distinct declarations.
  (Alain Frisch)
- PR#4800: better compilation of tuple assignment
  (Gabriel Scherer and Alain Frisch)
- PR#5995: keep -for-pack into account to name exceptions;
  -for-pack should now be used during bytecode compilation as well
  (Alain Frisch, report by Christophe Troestler)
- PR#6400: better error message for '_' used as an expression
  (Alain Frisch, report by whitequark)
- PR#6501: harden the native-code generator against certain uses of "%identity"
  (Xavier Leroy, report by Antoine Miné)
- PR#6636: add --version option
  (whitequark)
- PR#6679: fix pprintast printing of constraints in type declarations
  (Alain Frisch, report by Jun Furuse)
- PR#6737: fix Typedtree attributes on (fun x -> body) expressions
  (Alain Frisch, report by Oleg Kiselyov)
* PR#6865: remove special case for parsing "let _ = expr" in structures
  (Jérémie Dimino, Alain Frisch)
* PR#6438, PR#7059, GPR#315: Pattern guard disables exhaustiveness check
  (function Some x when x = 0 -> ()) will now raise warning 8 (non-exhaustive)
  instead of warning 25 (all clauses are guarded). 25 isn't raised anymore.
  Projects that set warning 8 as an error may fail to compile (presumably
  this is the semantics they wanted).
  (Alain Frisch, request by Martin Jambon and John Whitington)
- PR#6920: fix debug informations around uses of %apply or %revapply