@@ -1,0 +1,6 @@
+0
+1
+0
+1
+0
+1
